More recipes from the backlog

--- a/main.tex
+++ b/main.tex
@@ -3463,12 +3463,178 @@ Huacatay can be found jarred. If unavailable, increase the cilantro to 5 tbsp.
 \nextcolumn
 Serves 4
 \begin{steps}
-    \item Poke breasts with fork and sprinkle with salt.
-    \item Bake, covered with foil, skinned side down at \fahrenheit{275} until \celsius{60}, about 30 minutes.
-    \item Mix butter, flour, cornstarch, and pepper.
-    \item Pat dry, brush flat side with half of batter and brown in oil over high heat, 3 to 4 minutes.
-    \item Brush with remaining batter, flip and cook over medium until \celsius{68}, 3 to 4 minutes more.
-    \item Rest 5 minutes before serving.
+    \item Poke breasts with fork and sprinkle with salt
+    \item Bake, covered with foil, skinned side down at \fahrenheit{275} until \celsius{60}, about 30 minutes
+    \item Mix butter, flour, cornstarch, and pepper
+    \item Pat dry, brush flat side with half of batter and brown in oil over high heat, 3 to 4 minutes
+    \item Brush with remaining batter, flip and cook over medium until \celsius{68}, 3 to 4 minutes more
+    \item Rest 5 minutes before serving
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Vegetarian Reuben Sandwich}{\tag{V}\totaltime{15 min}}
+\begin{ingredients}
+1 tbsp mayonnaise
+1 tbsp ketchup
+1/2 tsp hot sauce
+1/4 tsp ground coriander
+salt and pepper
+2 slices rye bread
+2 slices Swiss cheese
+1/2 tbsp butter
+1/4 cup thinly sliced white onion
+1/2 cup sauerkraut
+pickles
+\end{ingredients}
+\nextcolumn
+Serves 1
+\begin{steps}
+    \item Squeeze and drain sauerkraut
+    \item Combine mayonnaise, ketchup, hot sauce, and coriander; season with salt and pepper
+    \item Spread some dressing on both slices of bread and top each with a slice of cheese
+    \item Add onion and pinch of salt to rest of dressing
+    \item Cook slices covered, cheese up, in butter on medium-low until golden, 4 to 5 minutes
+    \item Top with sauerkraut, pickles, and onions
+    \item Close sandwich, pressing lightly to meld, and cook 1 minute more on each side
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Braised Cabbage}{\preheat{\fahrenheit{325}}\totaltime{2 h 35 min}}
+\begin{ingredients}
+1 medium green cabbage (about 2 lbs)
+1 onion, sliced thick
+1 carrot, sliced
+1/4 cup chicken stock
+1/4 cup olive oil
+salt and pepper
+red pepper flakes
+\end{ingredients}
+\nextcolumn
+Serves 6 to 8
+\begin{steps}
+    \item Cut cabbage through core into 8 wedges and arrange as one layer into baking dish
+    \item Top with onion, carrot, stock, oil, salt, pepper, and red pepper flakes
+    \item Cook tightly covered for 2 hours, turning wedges after 1 h, adding water if dry
+    \item Uncover, increase heat to \fahrenheit{400} and roast 15 minutes more until browned
+\end{steps}
+Can be served warm or at room temperature.
+\end{denserecipe}
+
+\begin{recipe}{Skillet-Roasted Brussels Sprouts}{\tag{V}\totaltime{20 min}}
+\begin{ingredients}
+1 lb small brussels sprouts, halved
+5 tbsp olive oil
+1 tbsp lemon juice
+salt and pepper
+1/4 cup grated\hphantom{skip} pecorino
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Arrange sprouts into 12-inch skillet, cut sides down and drizzle with oil
+    \item Cover and cook on medium-high for 5 minutes
+    \item Uncover and cook 2 to 3 minutes more until deeply browned
+    \item Season with lemon juice, salt and pepper
+    \item Sprinkle with pecorino before serving
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Olive Oil Tart Shell}{\tag{VG}\preheat{\fahrenheit{350}}\totaltime{45 min}}
+\begin{ingredients}
+1 1/2 cups flour
+5 tbsp sugar
+1/2 tsp salt
+1/2 cup olive oil
+2 tbsp water
+\end{ingredients}
+\nextcolumn
+Makes a 9-inch tart
+\begin{steps}
+    \item Whisk together flour, sugar and salt
+    \item Mix in oil and water
+    \item Press into 9-inch tart pan
+    \item Bake crust at \fahrenheit{350} for 30 to 35 minutes, rotating once, until browned and firm
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Lemon–Olive Oil Tart}{\tag{V}\preheat{\fahrenheit{350}}\totaltime{1 h 15 min}}
+\begin{ingredients}
+1 Olive Oil Tart Shell
+1 cup sugar
+2 tbsp flour
+1/4 tsp salt
+3 eggs
+3 egg yolks
+1 tbsp lemon zest
+1/2 cup lemon juice
+1/4 cup good extra-virgin olive oil
+\end{ingredients}
+\nextcolumn
+Serves 8
+\begin{steps}
+    \item Whisk together sugar, flour, salt, eggs, yolks, lemon zest and juice
+    \item Cook on medium stirring constantly until thickened, about 5 minutes
+    \item Whisk in oil
+    \item Strain into tart shell
+    \item Bake at \fahrenheit{350} until set, 8 to 12 minutes
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Oven Ratatouille}{\tag{VG}\preheat{\fahrenheit{400}}\totaltime{2 h}}
+\begin{ingredients}
+1/3 cup olive oil
+8 cloves garlic, smashed
+2 large onions
+1 1/2 lbs eggplant
+2 lbs tomatoes
+2 small zucchinis
+2 bell peppers
+2 tsp herbes de provence
+1/8 tsp red pepper flakes
+1 bay leaf
+2 tbsp basil and parsley
+1 tbsp vinegar
+\end{ingredients}
+\nextcolumn
+Serves 6 to 8
+\begin{steps}
+    \item Cut all vegetables into 1-inch cubes
+    \item Saute onions and garlic in oil until softened
+    \item Add eggplant, tomatoes and spices; season with salt and pepper
+    \item Bake uncovered for 45 minutes
+    \item Mash into a sauce; add zucchini and peppers
+    \item Bake 25 minutes more
+    \item Remove, cover and let stand for 15 min; then discard bay leaf
+    \item Add basil, parsley and vinegar; season to taste
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Tender Green Beans in Tomato}{\tag{VG}\preheat{\fahrenheit{275}}\totaltime{1 h 30 min}}
+\begin{ingredients}
+5 tbsp olive oil
+1 onion, chopped
+4 cloves garlic, minced
+pinch cayenne pepper
+1 1/2 cups water
+1/2 tsp baking soda
+1 1/2 lbs green beans
+1 tbsp tomato paste
+14 oz diced tomatoes
+salt and pepper
+1/4 cup chopped parsley
+red wine vinegar
+\end{ingredients}
+\nextcolumn
+Serves 4 to 6
+\begin{steps}
+    \item Trim green beans and cut into 2-inch pieces
+    \item Saute onion in 3 tbsp oil until softened, add garlic and cayenne, and cook 30 seconds more
+    \item Add water, baking soda, and green beans
+    \item Simmer on medium-low for 10 minutes
+    \item Add tomato paste, tomatoes, salt and pepper
+    \item Bake covered at \fahrenheit{275} for 40 to 50 minutes
+    \item Season with vinegar and more salt as needed
+    \item Stir in parsley and drizzle with remaining oil
 \end{steps}
 \end{denserecipe}
 
