Fixes and new recipes

--- a/main.tex
+++ b/main.tex
@@ -3499,7 +3499,7 @@ Serves 1
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Braised Cabbage}{\preheat{\fahrenheit{325}}\totaltime{2 h 35 min}}
+\begin{recipe}{Braised Cabbage}{\preheat{\fahrenheit{325}}\totaltime{2 h 35 min}}
 \begin{ingredients}
 1 medium green cabbage (about 2 lbs)
 1 onion, sliced thick
@@ -3517,8 +3517,8 @@ Serves 6 to 8
     \item Cook tightly covered for 2 hours, turning wedges after 1 h, adding water if dry
     \item Uncover, increase heat to \fahrenheit{400} and roast 15 minutes more until browned
 \end{steps}
-Can be served warm or at room temperature.
-\end{denserecipe}
+Serve warm or at room temperature.
+\end{recipe}
 
 \begin{recipe}{Skillet-Roasted Brussels Sprouts}{\tag{V}\totaltime{20 min}}
 \begin{ingredients}
@@ -3535,11 +3535,11 @@ Serves 4
     \item Cover and cook on medium-high for 5 minutes
     \item Uncover and cook 2 to 3 minutes more until deeply browned
     \item Season with lemon juice, salt and pepper
-    \item Sprinkle with pecorino before serving
+    \item Plate and sprinkle with pecorino
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Olive Oil Tart Shell}{\tag{VG}\preheat{\fahrenheit{350}}\totaltime{45 min}}
+\begin{recipe}{Olive Oil Tart Shell}{\tag{VG}\preheat{\fahrenheit{350}}\totaltime{45 min}}
 \begin{ingredients}
 1 1/2 cups flour
 5 tbsp sugar
@@ -3555,9 +3555,9 @@ Makes a 9-inch tart
     \item Press into 9-inch tart pan
     \item Bake crust at \fahrenheit{350} for 30 to 35 minutes, rotating once, until browned and firm
 \end{steps}
-\end{denserecipe}
+\end{recipe}
 
-\begin{denserecipe}{Lemon–Olive Oil Tart}{\tag{V}\preheat{\fahrenheit{350}}\totaltime{1 h 15 min}}
+\begin{recipe}{Lemon–Olive Oil Tart}{\tag{V}\preheat{\fahrenheit{350}}\totaltime{1 h 15 min}}
 \begin{ingredients}
 1 Olive Oil Tart Shell
 1 cup sugar
@@ -3578,7 +3578,7 @@ Serves 8
     \item Strain into tart shell
     \item Bake at \fahrenheit{350} until set, 8 to 12 minutes
 \end{steps}
-\end{denserecipe}
+\end{recipe}
 
 \begin{denserecipe}{Oven Ratatouille}{\tag{VG}\preheat{\fahrenheit{400}}\totaltime{2 h}}
 \begin{ingredients}
@@ -3637,6 +3637,58 @@ Serves 4 to 6
     \item Stir in parsley and drizzle with remaining oil
 \end{steps}
 \end{denserecipe}
+
+\begin{denserecipe}{French Apple Cake}{\preheat{\fahrenheit{350}}\totaltime{1 h 45 min}}
+\begin{ingredients}
+4 cups baking apples
+2 tsp apple cider vinegar
+1 cup flour
+1 tsp baking powder
+1 tsp kosher salt
+1 stick butter, soft
+1/2 cup white sugar
+2 tbsp light brown sugar
+2 large eggs
+3 tbsp dark rum
+1/2 tsp vanilla extract
+3 tbsp white sugar
+\end{ingredients}
+\nextcolumn
+Serves 8
+\begin{steps}
+    \item Grease pan and line with parchment
+    \item Peel and cube apples; toss in vinegar
+    \item Mix flour, baking powder, salt
+    \item Beat butter and sugars until fluffy
+    \item Beat in eggs one at a time
+    \item Mix in rum, vanilla, and half of flour mixture
+    \item Fold in remaining flour first and then apples
+    \item Transfer to pan and top with 3 tbsp sugar
+    \item Bake at \fahrenheit{350} for 45 min and cool for 30
+\end{steps}
+Serve with powdered sugar, rum whipped cream.
+\end{denserecipe}
+
+\begin{recipe}{Chicken Miso Meatballs}{\preheat{\fahrenheit{425}}\totaltime{20 min}}
+\begin{ingredients}
+1/4 cup whole milk
+3 tbsp white miso
+1/2 tsp garlic powder
+2 tsp grated ginger
+1 tsp kosher salt
+3/4 tsp black pepper
+1/2 cup panko
+1 lb ground chicken
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Combine milk, miso, garlic, ginger, salt, pepper, and panko in a large bowl
+    \item Add ground chicken and mix until sticky
+    \item Shape into 12 golf-ball-size meatballs
+    \item Bake at \fahrenheit{425} for 18 minutes
+\end{steps}
+\end{recipe}
 
 % ===========================
 % === New recipe template ===
