--- a/main.tex
+++ b/main.tex
@@ -3690,6 +3690,30 @@ Serves 4
 \end{steps}
 \end{recipe}
 
+\begin{recipe}{Warm Tomato-Ginger Vinaigrette}{\tag{V}\totaltime{20 min}}
+\begin{ingredients}
+2+2 tbsp olive oil
+1 shallot, minced
+2 tsp grated ginger
+1/8 tsp ground cumin
+1/8 tsp ground fennel
+350 g cherry tomatoes, halved
+1/4 tsp kosher salt
+1 tbsp vinegar
+1 tsp brown sugar
+2 tbsp chopped cilantro
+\end{ingredients}
+\nextcolumn
+Makes about 2 cups
+\begin{steps}
+    \item Cook shallot, ginger, cumin, and fennel in 2 tbsp oil over medium until fragrant
+    \item Add tomatoes and salt, and cook until softened, 3 to 5 minutes
+    \item Add vinegar and sugar and season with salt and pepper
+    \item Cover to keep warm until serving
+    \item Stir in cilantro and remaining oil
+\end{steps}
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
