--- a/main.tex
+++ b/main.tex
@@ -3648,7 +3648,7 @@ Serves 4 to 6
 1 stick butter, soft
 1/2 cup white sugar
 2 tbsp light brown sugar
-2 large eggs
+2 eggs, warm
 3 tbsp dark rum
 1/2 tsp vanilla extract
 3 tbsp white sugar
@@ -3656,7 +3656,7 @@ Serves 4 to 6
 \nextcolumn
 Serves 8
 \begin{steps}
-    \item Grease pan and line with parchment
+    \item Grease 8-inch pan and line with parchment
     \item Peel and cube apples; toss in vinegar
     \item Mix flour, baking powder, salt
     \item Beat butter and sugars until fluffy
@@ -3664,7 +3664,7 @@ Serves 8
     \item Mix in rum, vanilla, and half of flour mixture
     \item Fold in remaining flour first and then apples
     \item Transfer to pan and top with 3 tbsp sugar
-    \item Bake at \fahrenheit{350} for 45 min and cool for 30
+    \item Bake at \fahrenheit{350} for 45 minutes and cool for 30
 \end{steps}
 Serve with powdered sugar, rum whipped cream.
 \end{denserecipe}
@@ -3713,6 +3713,83 @@ Makes about 2 cups
     \item Stir in cilantro and remaining oil
 \end{steps}
 \end{recipe}
+
+\begin{recipe}{Roasted Balsamic Beets}{\tag{V}\preheat{\fahrenheit{375}}\totaltime{1 h 30 min}}
+\begin{ingredients}
+1 1/2 lb beets
+olive oil
+salt
+2 tbsp white balsamic vinegar
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+\item Wrap pairs of beets in foil with olive oil and salt
+\item Roast at \fahrenheit{375} for 45-60 min
+\item Cool, peel, and cut into bite-size pieces
+\item Marinate with olive oil, salt, pepper, and white balsamic vinegar
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Crispy Herbed Goat Cheese}{\preheat{\fahrenheit{475}}\totaltime{1 h 20 min}}
+\begin{ingredients}
+200 g panko bread crumbs
+550 g goat cheese
+1 tsp oregano
+3-4 tbsp fresh chives
+4 tbsp fresh thyme
+1/2 tsp black pepper
+3 eggs
+1 tbsp dijon mustard
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+\item Process breadcrumbs until fine
+\item Mix goat cheese, herbs, and pepper
+\item Form into 12 pucks and freeze 20 minutes
+\item Dip pucks in beaten egg and dijon, coat with panko, and freeze 20-25 minutes
+\item Bake 7-10 minutes (11 if fully frozen) at \fahrenheit{475}
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Blonde Balsamic Vinaigrette}{\tag{V}\totaltime{10 min}}
+\begin{ingredients}
+1/4 cup white balsamic vinegar
+1 tbsp minced shallot
+1/2 tsp kosher salt
+1 3/4 tbsp grainy mustard
+black pepper
+1 1/4 tbsp honey
+1 cup extra virgin olive oil
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+\item Whisk together all ingredients except oil
+\item Slowly stream in oil while whisking
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Beet and Goat Cheese Salad}{\tag{V}\totaltime{15 min}}
+\begin{ingredients}
+6 servings Roasted Balsamic Beets
+2 pucks Crispy Herbed Goat Cheese
+1/2 cup Blonde Balsamic Vinaigrette
+2 cups shaved fennel
+5 cups chopped frisee, escarole, lettuces
+dill fronds
+kosher salt
+chopped pistachios
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+\item Toss greens, fennel, dill, and vinaigrette
+\item Add salt and pistachios
+\item Top with beets, goat cheese, more dressing and more pistachios
+\end{steps}
+\end{denserecipe}
 
 % ===========================
 % === New recipe template ===
