--- a/main.tex
+++ b/main.tex
@@ -3791,6 +3791,108 @@ Serves 6
 \end{steps}
 \end{denserecipe}
 
+\begin{recipe}{Grilling Glaze}{\tag{VG}\totaltime{5 min}}
+\begin{ingredients}
+1 tbsp soy sauce
+1 tbsp dijon mustard
+1 tbsp pomegranate molasses
+1 tbsp zaatar
+1/2 cup oil
+2 garlic cloves
+\end{ingredients}
+\nextcolumn
+Makes 1/2 cup
+\begin{steps}
+    \item Grate garlic discarding large pieces
+    \item Add everything into a squeeze bottle and shake to combine
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Gazpacho Dressing}{\tag{VG}\totaltime{15 min}}
+\begin{ingredients}
+1/2 cucumber, peeled
+1 1/2 bell pepper
+1 jalapeno
+1 green onion
+2 cloves garlic, peeled
+2 1/2 lb ripe tomatoes
+5 basil leaves
+1/2 tsp black pepper
+2 tsp kosher salt
+1/2 cup wine vinegar
+1/2 cup olive oil
+\end{ingredients}
+\nextcolumn
+Makes 8 cups
+\begin{steps}
+    \item Chop vegetables
+    \item Add all ingredients into a blender 
+    \item Add 1-2 tsp sugar if tomatoes are not very sweet
+    \item Blend until smooth
+    \item Strain
+    \item Season to taste
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Gazpacho Pasta Salad}{\tag{VG}\totaltime{1 day}}
+\begin{ingredients}
+8 cups Gazpacho Dressing
+1 lb elbow macaroni
+1/2 large cucumber
+1/2 bell pepper
+2 tbsp red onion
+salt and pepper
+\end{ingredients}
+\nextcolumn
+Serves
+\begin{steps}
+    \item Cook macaroni in salted water and drain well
+    \item Mix macaroni and Gazpacho Dressing
+    \item Refrigerate overnight or at least 5 hours
+    \item Finely dice vegetables
+    \item Mix vegetables into macaroni, reserving some for garnish
+    \item  Season to taste, plate and garnish
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Harissa-Honey Pork Tenderloin}{\preheat{\fahrenheit{375}}\totaltime{35 min}}
+\begin{ingredients}
+1 pork tenderloin
+1 tsp kosher salt
+black pepper
+1/4 cup harissa
+2 tbsp honey
+2 tsp oil
+\end{ingredients}
+\nextcolumn
+Serves 3
+\begin{steps}
+    \item Cut pork tenderloin in half, pat it dry and season with salt and pepper
+    \item Mix harissa and honey
+    \item Rub thin layer onto pork
+    \item Brown well in oil and remove to plate
+    \item Coat in remaining harissa-honey mixture and return to wiped pan
+    \item Roast until \fahrenheit{140} in thickest parts, 8 to 12 minutes, rest 10 minutes and slice
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Hot Green Spice Blend}{\tag{VG}\totaltime{5 min}}
+\begin{ingredients}
+2 parts freeze dried chives
+2 parts freeze dried shallots
+2 parts whole green peppercorns
+1 part dried minced garlic
+1 part green chile flake
+\end{ingredients}
+\nextcolumn
+\begin{steps}
+    \item Crush peppercorns and garlic
+    \item Add remaining ingredients
+    \item Grind until fine
+\end{steps}
+Use on eggs, potatoes or pan-seared chicken, mix into sour cream for a dip, or inside a grilled cheese.
+\end{recipe}
+
 % ===========================
 % === New recipe template ===
 % ===========================
