--- a/appetizers.tex
+++ b/appetizers.tex
@@ -41,7 +41,7 @@ Serves 2
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Seared Scallops with Jalapeno Vinaigrette}{\totaltime{15 min}}
+\begin{recipe}{Scallops with Jalapeno Vinaigrette}{\totaltime{15 min}}
 \begin{ingredients}
 1 large jalapeno, seeded
 1/4 cup rice vinegar
