--- a/casseroles_and_savory_pies.tex
+++ b/casseroles_and_savory_pies.tex
@@ -114,7 +114,7 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Caramelized Onion, Gruyere, Tomato Tart}{\preheat{\celsius{180}}\totaltime{1 h}}
+\begin{recipe}{Onion, Gruyere and Tomato Tart}{\preheat{\celsius{180}}\totaltime{1 h}}
 \begin{ingredients}
 1 vodka pie dough
 2 lb onions, caramelized
