--- a/components.tex
+++ b/components.tex
@@ -1,5 +1,25 @@
 \BeginCategoryTOC{Components}
 
+\begin{recipe}{Braised Peppers and Onions}{\tag{VG}\totaltime{40 min}}
+\begin{ingredients}
+2 tbsp oil
+3 large bell peppers
+1 large onion
+2 cloves garlic
+2 tbsp ground cumin
+2 bay leaves
+1/2 tsp kosher salt
+black pepper
+\end{ingredients}
+\nextcolumn
+Serves 4--6
+\begin{steps}
+    \item Heat oil in large pot over medium heat
+    \item Cook all vegetables and spices, stirring occasionally, until tender but not browned, about 30 minutes
+\end{steps}
+Serve in hot dogs, sandwiches, or as a side.
+\end{recipe}
+
 \begin{recipe}{Fast Caramelized Onions}{\tag{VG}\totaltime{30 min}}
 \begin{ingredients}
 3 lb onions, sliced through root
@@ -35,22 +55,19 @@
 Use on eggs, potatoes or pan-seared chicken, mix into sour cream for a dip, or inside a grilled cheese.
 \end{recipe}
 
-\begin{recipe}{Braised Peppers and Onions}{\tag{VG}\totaltime{40 min}}
+\begin{recipe}{Poached Chicken Breast}{\totaltime{1 h 15 min}}
 \begin{ingredients}
-2 tbsp oil
-3 large bell peppers
-1 large onion
-2 cloves garlic
-2 tbsp ground cumin
-2 bay leaves
-1/2 tsp kosher salt
-black pepper
+2 l cold water
+15 g salt
+700 g chicken breast, with bone and skin preferably
+aromatics, such as a scallion and a knob of ginger
 \end{ingredients}
 \nextcolumn
-Serves 4--6
+Serves 4
 \begin{steps}
-    \item Heat oil in large pot over medium heat
-    \item Cook all vegetables and spices, stirring occasionally, until tender but not browned, about 30 minutes
+    \item Bring water, salt, chicken and aromatics to \celsius{65} over medium-high heat
+    \item Adjust heat to maintain temperature between \celsius{65-70}
+    \item Cook until chicken reaches \celsius{65} in thickest part, about 1 hour
+    \item Strain broth and save for another use
 \end{steps}
-Serve in hot dogs, sandwiches, or as a side.
 \end{recipe}
