--- a/meat_and_poultry_mains.tex
+++ b/meat_and_poultry_mains.tex
@@ -1,6 +1,6 @@
 \BeginCategoryTOC{Meat \& Poultry Mains}
 
-\begin{recipe}{Chicken Thighs with Preserved Lemon}{\totaltime{50 min}}
+\begin{recipe}{Chicken with Preserved Lemon}{\totaltime{50 min}}
 \begin{ingredients}
 1 tbsp olive oil
 8 bone-in chicken thighs
@@ -100,23 +100,6 @@ Serves 4 generously
     \item Reduce slightly, pour over lamb and garnish with pomegranate and cilantro
 \end{steps}
 \end{denserecipe}
-
-\begin{recipe}{Poached Chicken Breast}{\totaltime{1 h 15 min}}
-\begin{ingredients}
-2 l cold water
-15 g salt
-700 g chicken breast, with bone and skin preferably
-aromatics, such as a scallion and a knob of ginger
-\end{ingredients}
-\nextcolumn
-Serves 4
-\begin{steps}
-    \item Bring water, salt, chicken and aromatics to \celsius{65} over medium-high heat
-    \item Adjust heat to maintain temperature between \celsius{65-70}
-    \item Cook until chicken reaches \celsius{65} in thickest part, about 1 hour
-    \item Strain broth and save for another use
-\end{steps}
-\end{recipe}
 
 \begin{recipe}{Reverse Seared Steak}{\preheat{\celsius{120}}\totaltime{50 min}}
 \begin{ingredients}
