--- a/pescatarian_mains.tex
+++ b/pescatarian_mains.tex
@@ -177,7 +177,7 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Spicy Roasted Vegetables and Mozzarella}{\preheat{\celsius{220}}\totaltime{1 h}}
+\begin{denserecipe}{Roasted Vegetables and Mozzarella}{\preheat{\celsius{220}}\totaltime{1 h}}
 \begin{ingredients}
 1 1/2 lb carrots, peeled
 4 shallots, peeled
