--- a/salads_and_cold_preparations.tex
+++ b/salads_and_cold_preparations.tex
@@ -277,7 +277,7 @@ Serves 4 to 6
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Miso-Sesame Cucumber and Avocado Salad}{\totaltime{10 min}}
+\begin{denserecipe}{Cucumber and Avocado Salad}{\totaltime{10 min}}
 \begin{ingredients}
 1/4 cup Miso-Sesame Vinaigrette
 1/2 tsp red-pepper flakes
