--- a/sauces_and_marinades.tex
+++ b/sauces_and_marinades.tex
@@ -224,7 +224,7 @@ Yields about 1 1/4 cups
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Peruvian Green Chile Sauce (Ají Verde)}{\totaltime{10 min}}
+\begin{recipe}{Ají Verde}{\totaltime{10 min}}
 \begin{ingredients}
 1/2 cup mayonnaise
 1 jalapeno, seeded
