--- a/soups_and_stews.tex
+++ b/soups_and_stews.tex
@@ -255,7 +255,7 @@ Serves 6
 Garnish with grated pecorino or parmesan.
 \end{denserecipe}
 
-\begin{denserecipe}{Thai Curry Broth with Tofu and Herbs}{\tag{VG}\totaltime{30 min}}
+\begin{denserecipe}{Curry Broth with Tofu and Herbs}{\tag{VG}\totaltime{30 min}}
 \begin{ingredients}
 28 oz silken tofu, drained
 2 tbsp oil
