New recipes, recipe reference hyperlinks

--- a/casseroles_and_savory_pies.tex
+++ b/casseroles_and_savory_pies.tex
@@ -30,7 +30,7 @@ Makes 6 small pies
 
 \begin{denserecipe}{Heirloom Tomato Tart}{\tag{V}\preheat{\celsius{190}}\totaltime{1 h 30 min}}
 \begin{ingredients}
-simple pie crust
+\reciperef{Simple Pie Crust}
 500 g ripe heirloom tomatoes
 1/4 cup pesto
 3/4 cup mozzarella, shredded
@@ -87,7 +87,7 @@ Serves 4 to 6
 
 \begin{denserecipe}{French Macaroni Casserole}{\totaltime{30 minutes}}
 \begin{ingredients}
-3 cups mornay sauce
+3 cups \reciperef{Mornay Sauce}
 1 1/2 cups macaroni
 1 tbsp olive oil
 1 large onion
@@ -116,7 +116,7 @@ Serves 4
 
 \begin{recipe}{Onion, Gruyere and Tomato Tart}{\preheat{\celsius{180}}\totaltime{1 h}}
 \begin{ingredients}
-1 vodka pie dough
+1 \reciperef{Vodka Pie Dough}
 2 lb onions, caramelized
 110 g gruyere, grated
 450 g cherry tomatoes
@@ -130,4 +130,28 @@ Serves 6 to 8
     \item Fill slightly cooled tart with onions, cheese and tomatoes, in that order
     \item Bake at \celsius{190} until golden brown, about 30-40 minutes
 \end{steps}
+\end{recipe}
+
+\begin{recipe}{French Onion Lentils and Farro}{\tag{V}\preheat{\celsius{190}}\totaltime{1 hr 15 min}}
+\begin{ingredients}
+\reciperef{Fast Caramelized Onions}, 2/3 portion
+2 cloves garlic, minced
+2 tbsp dry sherry
+1 1/2 cups farro
+3/4 cup green lentils
+6 cups vegetable broth
+3 sprigs thyme
+salt and pepper
+2 cups grated gruyere
+\end{ingredients}
+\nextcolumn
+Serves 6--8
+\begin{steps}
+    \item Add garlic, sherry and farro to onions
+    \item Cook 3 minutes on medium-high
+    \item Add lentils, broth and thyme, bring to simmer, and season with salt and pepper
+    \item Bake covered at \celsius{190} for 40--50 minutes, stirring halfway, then remove thyme
+    \item Top with gruyere and broil until browned
+\end{steps}
+Add broth while baking if it looks dry.
 \end{recipe}
