--- a/doughs_and_batters.tex
+++ b/doughs_and_batters.tex
@@ -1,44 +1,5 @@
 \BeginCategoryTOC{Doughs \& Batters}
 
-\begin{recipe}{Simple Pie Crust}{\tag{V}\totaltime{1 h 15 min}}
-\begin{ingredients}
-150 g flour
-1/4 tsp salt
-10 tbsp cold unsalted butter
-2 to 4 tbsp cold water
-\end{ingredients}
-\nextcolumn
-Makes enough for one 9-inch pie
-\begin{steps}
-    \item Cut butter into small cubes
-    \item Pulse flour and salt in food processor
-    \item Add butter and pulse until coarsely mixed
-    \item Slowly pulse in water until dough just comes together and is moist but not wet
-    \item Gather into ball and refrigerate wrapped at least 1 hour and up to 2 days
-\end{steps}
-\end{recipe}
-
-\begin{recipe}{Vodka Pie Dough}{\totaltime{1 h}}
-\begin{ingredients}
-2 1/2 cups  flour
-1 tsp table salt
-2 tbsp sugar
-12 tbsp cold butter, diced
-1/2 cup cold lard, in chunks
-1/4 cup cold vodka
-1/4 cup cold water
-\end{ingredients}
-\nextcolumn
-Fills two 11-inch tart pans
-\begin{steps}
-    \item Mix 1 1/2 cups flour, salt and sugar in food processor
-    \item Add fats and process until homogenous and starting to clump
-    \item Scrape sides, add remaining flour and pulse 4 to 6 quick times
-    \item Sprinkle on vodka and water, fold together with spatula
-    \item Refrigerate for 45 minutes
-\end{steps}
-\end{recipe}
-
 \begin{denserecipe}{Choux Pastry}{\tag{V}\preheat{\celsius{200}}\totaltime{20 min}}
 \begin{ingredients}
 1 cup (235 g) water or milk
@@ -79,4 +40,88 @@ Makes a 9-inch tart
     \item Press into 9-inch tart pan
     \item Bake crust at \celsius{180} for 30 to 35 minutes, rotating once, until browned and firm
 \end{steps}
+\end{recipe}
+
+\begin{recipe}{Simple Pie Crust}{\tag{V}\totaltime{1 h 15 min}}
+\begin{ingredients}
+150 g flour
+1/4 tsp salt
+10 tbsp cold unsalted butter
+2 to 4 tbsp cold water
+\end{ingredients}
+\nextcolumn
+Makes enough for one 9-inch pie
+\begin{steps}
+    \item Cut butter into small cubes
+    \item Pulse flour and salt in food processor
+    \item Add butter and pulse until coarsely mixed
+    \item Slowly pulse in water until dough just comes together and is moist but not wet
+    \item Gather into ball and refrigerate wrapped at least 1 hour and up to 2 days
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Vodka Pie Dough}{\totaltime{1 h}}
+\begin{ingredients}
+2 1/2 cups flour
+1 tsp table salt
+2 tbsp sugar
+12 tbsp cold butter, diced
+1/2 cup cold lard, in chunks
+1/4 cup cold vodka
+1/4 cup cold water
+\end{ingredients}
+\nextcolumn
+Fills two 11-inch tart pans
+\begin{steps}
+    \item Mix 1 1/2 cups flour, salt and sugar in food processor
+    \item Add fats and process until homogenous and starting to clump
+    \item Scrape sides, add remaining flour and pulse 4 to 6 quick times
+    \item Sprinkle on vodka and water, fold together with spatula
+    \item Refrigerate for 45 minutes
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Whole Wheat Olive Oil Pie Crust}{\tag{VG}\totaltime{1 h 15 min}}
+\begin{ingredients}
+3/4 cup water
+2 tsp vinegar or lemon juice
+200 g whole wheat flour
+115 g all purpose flour
+3/4 tsp salt
+1/4 cup olive oil
+\end{ingredients}
+\nextcolumn
+Fills two 9--10-inch tart pans
+\begin{steps}
+    \item Mix water and vinegar, set aside
+    \item Mix dry ingredients in food processor
+    \item Turn on and pour in olive oil
+    \item When combined, pour in water mixture and let run until dough forms a ball
+    \item Knead on floured surface until just smooth
+    \item Divide, press flat and wrap in plastic
+    \item Rest 1 hour or refrigerate up to 3 days
+\end{steps}
+\end{recipe}
+
+\begin{recipe}{Yeasted Pie Crust}{\tag{V}\totaltime{1 h 30 min}}
+\begin{ingredients}
+1/2 cup warm water
+1 egg, warm
+1/4 cup olive oil
+1 1/2 tsp instant yeast
+1 cup whole wheat flour
+1 cup all purpose flour
+3/4 teaspoon salt
+\end{ingredients}
+\nextcolumn
+Fills two 10-inch tart pans
+\begin{steps}
+    \item Beat together water, egg and olive oil
+    \item Stir in combined dry ingredients
+    \item Knead on floured surface until just smooth
+    \item Let rise in oiled and covered bowl until doubled in size, about 1 hour
+    \item Deflate, divide, cover and rest 5 minutes
+    \item Roll out into thin rounds and line pans
+\end{steps}
+Use or freeze immediately. Bake from frozen.
 \end{recipe}
