--- a/meat_and_poultry_mains.tex
+++ b/meat_and_poultry_mains.tex
@@ -306,3 +306,54 @@ Serves 3
     \item Roast until \celsius{60} in thickest parts, 8 to 12 minutes, rest 10 minutes and slice
 \end{steps}
 \end{recipe}
+
+\begin{recipe}{Gochujang-Glazed Pork Chops}{\preheat{\celsius{135}}\totaltime{1 hr 15 min}}
+\begin{ingredients}
+4 boneless pork chops
+4 tsp gochujang
+4 tsp miso
+1 tbsp soy sauce
+1 tbsp maple syrup
+1 tbsp orange juice
+1 clove garlic, minced
+1/2 tsp salt
+1 scallion, thinly sliced
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Mix gochujang, miso, soy sauce, maple syrup, orange juice and garlic
+    \item Sprinkle chops with salt
+    \item Brush tops with 1/3 of the glaze
+    \item Roast chops on a rack at \celsius{135} until \celsius{57} inside, 40--45 minutes
+    \item Brush tops with remaining glaze and broil until slightly charred, 3--6 minutes
+    \item Rest 5 minutes and sprinkle with scallion
+\end{steps}
+\end{recipe}
+
+\begin{denserecipe}{Sweet Hot Mustard Chicken Thighs}{\preheat{230C}\totaltime{5 hr}}
+\begin{ingredients}
+8 skin-on chicken thighs
+1/2 cup dijon mustard
+1/4 cup brown sugar
+1/4 cup red wine vinegar
+1 tsp mustard powder
+1 tsp salt
+1 tsp pepper
+1/2 tsp ground chipotle
+pinch cayenne
+4 cloves garlic, minced
+1 onion, sliced into rings
+2 tsp vegetable oil
+\end{ingredients}
+\nextcolumn
+Serves 8
+\begin{steps}
+    \item Slash each thigh twice to bone
+    \item Combine dijon, sugar, vinegar, mustard, salt, pepper, chipotle, cayenne and garlic
+    \item Add chicken and marinate 4 hours to overnight
+    \item Scatter onion rings on oiled foil-lined sheetpan, top with chicken, and brush with oil
+    \item Roast at \celsius{230} until well browned, 35--45 min
+    \item Plate chicken and onions, reduce drippings by half, skim the fat, and spoon over chicken
+\end{steps}
+\end{denserecipe}
