--- a/pasta_and_noodles.tex
+++ b/pasta_and_noodles.tex
@@ -117,3 +117,31 @@ Serves 4
 \item Adjust consistency and check seasoning
 \end{steps}
 \end{recipe}
+
+\begin{denserecipe}{Fresh Cucumber Pasta}{\tag{V}\totaltime{15 min}}
+\begin{ingredients}
+250 g spinach fettuccine
+1 dl basil or mint
+3 tbsp dill
+2 cloves garlic
+1/2 lemon
+1 tbsp capers
+4 tbsp olive oil
+1 tsp mustard seeds
+pinch of salt and sugar
+1 cucumber
+5 radishes
+150 g feta
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Put pasta to boil
+    \item Mince herbs and garlic; zest and juice lemon
+    \item Mix herbs, garlic and lemon with capers, oil, mustard seeds, salt and sugar
+    \item Shave cucumber into strips
+    \item Thinly slice radishes
+    \item Toss together sauce, vegetables and pasta
+    \item Plate and crumble feta on top
+\end{steps}
+\end{denserecipe}
