--- a/patisserie.tex
+++ b/patisserie.tex
@@ -177,12 +177,12 @@ Makes 8 to 10 small pancakes
 \item Flip, cook other side for 2 minutes
 \item Repeat with remaining batter
 \end{steps}
-Serve with Blueberry Syrup.
+Serve with \reciperef{Blueberry Syrup}.
 \end{denserecipe}
 
-\begin{recipe}{Lemon–Olive Oil Tart}{\tag{V}\preheat{\celsius{180}}\totaltime{1 h 15 min}}
+\begin{recipe}{Lemon--Olive Oil Tart}{\tag{V}\preheat{\celsius{180}}\totaltime{1 h 15 min}}
 \begin{ingredients}
-1 Olive Oil Tart Shell
+1 \reciperef{Olive Oil Tart Shell}
 1 cup sugar
 2 tbsp flour
 1/4 tsp salt
