--- a/salads_and_cold_preparations.tex
+++ b/salads_and_cold_preparations.tex
@@ -63,7 +63,7 @@ Use as filling for sandwiches, cream puffs or crepes.
 1 boneless, skinless chicken breast
 1 lb sugar snap peas
 3 tbsp roasted white sesame seeds
-1/3 cup Miso-Sesame Vinaigrette
+1/3 cup \reciperef{Miso-Sesame Vinaigrette}
 \end{ingredients}
 \nextcolumn
 Serves 2
@@ -279,7 +279,7 @@ Serves 4 to 6
 
 \begin{denserecipe}{Cucumber and Avocado Salad}{\totaltime{10 min}}
 \begin{ingredients}
-1/4 cup Miso-Sesame Vinaigrette
+1/4 cup \reciperef{Miso-Sesame Vinaigrette}
 1/2 tsp red-pepper flakes
 2 ripe avocados, peeled and cubed
 1 lb cucumbers, thinly sliced
@@ -361,9 +361,9 @@ Serves 6
 
 \begin{denserecipe}{Beet and Goat Cheese Salad}{\tag{V}\totaltime{15 min}}
 \begin{ingredients}
-6 servings Roasted Balsamic Beets
-2 pucks Crispy Herbed Goat Cheese
-1/2 cup Blonde Balsamic Vinaigrette
+6 servings \reciperef{Roasted Balsamic Beets}
+2 pucks \reciperef{Crispy Herbed Goat Cheese}
+1/2 cup \reciperef{Blonde Balsamic Vinaigrette}
 2 cups shaved fennel
 5 cups chopped frisee, escarole, lettuces
 dill fronds
@@ -407,7 +407,7 @@ Makes 8 cups
 
 \begin{recipe}{Gazpacho Pasta Salad}{\tag{VG}\totaltime{1 day}}
 \begin{ingredients}
-8 cups Gazpacho Dressing
+8 cups \reciperef{Gazpacho Dressing}
 1 lb elbow macaroni
 1/2 large cucumber
 1/2 bell pepper
@@ -418,7 +418,7 @@ salt and pepper
 Serves
 \begin{steps}
     \item Cook macaroni in salted water and drain well
-    \item Mix macaroni and Gazpacho Dressing
+    \item Mix macaroni and \reciperef{Gazpacho Dressing}
     \item Refrigerate overnight or at least 5 hours
     \item Finely dice vegetables
     \item Mix vegetables into macaroni, reserving some for garnish
