--- a/breads_and_pancakes.tex
+++ b/breads_and_pancakes.tex
@@ -107,7 +107,7 @@ Serve with: manchego and berries / gouda and fig jam / sour cream and lemon curd
 
 \begin{denserecipe}{Hamburger Buns}{\tag{V}\preheat{\celsius{180}}\totaltime{2 h 30 min}}
 \begin{ingredients}
-1 batch All-Purpose Enriched Dough, chilled
+1 batch \reciperef{All-Purpose Enriched Dough}, chilled
 1 egg, beaten
 3 tbsp white sesame seeds 
 \end{ingredients}
@@ -132,13 +132,13 @@ Makes 10 buns
 1/8 tsp vinegar or lemon juice
 \end{ingredients}
 \nextcolumn
-This is a variation on No-Knead Bread with additional folds and higher hydration.
+This is a variation on \reciperef{No-Knead Bread} with additional folds and higher hydration.
 \begin{steps}
-    \item Make the dough as in No-Knead Bread
+    \item Make the dough as in \reciperef{No-Knead Bread}
     \item After 30 min, using wet hand lift, stretch and fold over an edge; rotate and repeat 4 to 6 times to work all the way around the dough
     \item Repeat folds 4 to 6 times over 2 to 3 hours
     \item Resting: in refrigerator overnight or up to 3 days, then at room temperature 3 to 10 hours; or at room temperature for 10 hours
-    \item Shape, proof and bake as in No-Knead Bread
+    \item Shape, proof and bake as in \reciperef{No-Knead Bread}
 \end{steps}
 \end{denserecipe}
 
