--- a/pescatarian_mains.tex
+++ b/pescatarian_mains.tex
@@ -4,7 +4,7 @@
 \begin{ingredients}
 1 lime, zest and juice
 1/2 inch ginger, grated
-2 tbsp Miso-Sesame Vinaigrette
+2 tbsp \reciperef{Miso-Sesame Vinaigrette}
 1/2 apple
 1/4 cucumber
 1 scallion
@@ -103,7 +103,7 @@ old bay, for garnish
 \lihead{Florentine}
 
 \begin{ingredients}
-2 tbsp Creamed Spinach
+2 tbsp \reciperef{Creamed Spinach}
 nutmeg, for garnish
 \end{ingredients}
 
@@ -204,3 +204,74 @@ Serves 4
 \item Drizzle on lemon juice and garnish with herbs
 \end{steps}
 \end{denserecipe}
+
+\begin{denserecipe}{Tomato Egg Drop}{\tag{V}\totaltime{30 min}}
+\begin{ingredients}
+3 large eggs, beaten
+neutral oil
+pinch salt, white pepper
+3 tomatoes
+1 scallion, thinly sliced
+1 cup chicken stock
+1 pinch MSG
+1 tsp sesame oil
+1 tbsp ketchup
+1 tsp salt, 1/2 tsp sugar
+1/2 tbsp cornstarch
+1 tbsp water
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+    \item Beat eggs, 1 tsp oil, salt and white pepper
+    \item Peel tomatoes and cut into wedges
+    \item Cook scallions on medium-high in 1 tbsp oil until barely golden
+    \item Add tomatoes; cook until they start to soften
+    \item Add stock, deglaze, bring to boil
+    \item Add MSG, sesame oil, ketchup, salt and sugar
+    \item Off heat pour egg on top as thin blanket
+    \item Wait 1 minute; cook on medium-low until set
+\end{steps}
+Garnish with scallion and serve with white rice.
+\end{denserecipe}
+
+\begin{densecard}{Double-Glazed Salmon}{\preheat{\celsius{150}}\totaltime{50 min}}
+\begin{steps}
+    \item Brine 4 salmon fillets in 2 l water, 1/4 cup salt, 1/4 cup sugar, 15 minutes
+    \item Combine glaze, whisk until smooth, cook until thick, and set aside 2 tbsp
+    \item Pat fillets dry, brown flesh sides in oil, and flip, 2--3 minutes
+    \item Brush on 2 tbsp glaze, roast at \celsius{150} until \celsius{50} inside, 10--15 minutes
+    \item Brush on remaining glaze and sprinkle with 1 tbsp minced parsley
+\end{steps}
+\columnratio{0.333}
+\begin{paracol}{3}
+\begin{ingredients}
+\ihead{Maple \& Smoke}\\
+1/3 cup wine vinegar\\
+3 tbsp maple syrup\\
+4 tsp soy sauce\\
+1 1/2 tsp cornstarch\\
+1/8 tsp liquid smoke
+\end{ingredients}
+\nextcolumn
+\begin{ingredients}
+\ihead{Ginger \& Cider}\\
+1/3 cup apple cider\\
+3 tbsp cider vinegar\\
+2 tbsp sugar\\
+4 tsp soy sauce\\
+1 1/2 tsp cornstarch\\
+1-inch ginger, smashed
+\end{ingredients}
+\nextcolumn
+\begin{ingredients}
+\ihead{Lemon \& Thyme}\\
+1/4 cup lemon juice\\
+3 tbsp water\\
+2 tbsp sugar\\
+4 tsp soy sauce\\
+1 1/2 tsp cornstarch\\
+6 sprigs thyme
+\end{ingredients}
+\end{paracol}
+\end{densecard}
